Update StreaPractice1.java
Updates